@@ -205,6 +205,11 @@ keyboard, NOW!"</li>
 
 <li>
 "Mrkgnaow!" - Tiny (who read a lot of James Joyce as an undergraduate)</li>
+
+<li>
+"I hate cats!"
+</li>
+
 </ul>
 
 <hr WIDTH="90%">
