@@ -1,3 +1,8 @@
+2000-11-20  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm-cats/index.html:
+	added to trivia
+
 2000-11-11  Mikhael Goikhman  <migo@homemail.com>
 
 	* download.html: increased version number to 2.3.22
@@ -10,8 +15,8 @@
 
 2000-10-26  Dan Espen  <dane@mk.telcordia.com>
 
-	* screenshots/index.html: A flood of screenshots, Andre Bonhote, Kendrick Vargas,
-	and Tenebrae.
+	* screenshots/index.html:
+	A flood of screenshots, Andre Bonhote, Kendrick Vargas, and Tenebrae.
 
 2000-10-18  Mikhael Goikhman  <migo@homemail.com>
 
